tests/snapshot/error/annex_b/expression/assign_to_call_expression.js
function f() {}

f() = 1;